# gg-bot

./: .env.example  .gitignore  CHECK_DEPLOYMENT.md  CHECK_WAYPAL_SERVICE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_FIXES.md  HOTEL_AGENT_IMPLEMENTATION.md  Procfile  README.md  RENDER_DEPLOYMENT_STEPS.md  SETUP_GUIDE.md  deploy.sh  flight_selector.py  flight_selector_production.py  main.py  prompt_test.py  pyproject.toml  requirements_web.txt  requirements_web_production.txt  start_bot.py  test_button_text.py  test_enhanced_city_classification.py  test_hotel_detection.py  test_hotel_extraction.py  test_hotel_response_detection.py  test_hotel_ui.py  test_map.html  test_telegram_simulation.py  test_web_link.py
app/config/: settings.py
app/data/: city_classification.json  demo.py
app/handlers/: message_handlers.py
app/models/: travel_plan.py
app/prompts/: deep_search.txt  samples.py  travel.py
app/services/: city_classifier.py  conversation_memory.py  firecrawl_service.py  flight_search.py  follow_up_questions.py  hotel_agent.py  hotel_slots_model.py  hotel_state_machine.py  hotel_ui_service.py  hotel_ui_v2.py  inline_keyboards.py  llm_service.py  plan_storage.py
search/: google_search.py
templates/: flight_options.html
waypal-deployment/static/css/: flight_selector.css
